Middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: traefik-dashboard-authentication
  namespace: traefik
spec:
  basicAuth:
    realm: "Traefik Dashboard"
    secret: traefik-dashboard-authentication
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: wordpress-authentication
  namespace: traefik
spec:
  basicAuth:
    realm: "wordpress-authentication"
    secret: wordpress-authentication
---
