Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-ingress
  namespace: traefik
  labels:
    app: traefik-ingress
spec:
  selector:
    app: traefik-ingress
  type: LoadBalancer
  externalTrafficPolicy: Local
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
    nodePort: 30080
  - name: https
    port: 443
    protocol: TCP
    targetPort: 443
    nodePort: 30443
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-dashboard
  namespace: traefik
  labels:
    app: traefik-ingress
spec:
  selector:
    app: traefik-ingress
  type: ClusterIP
  ports:
  - name: dashboard
    port: 8080
    protocol: TCP
    targetPort: 8080
